    "ovn-installed".  This external-id is set by ovn-controller only after all
    openflow operations corresponding to the OVS interface being added have
    been processed.
  - ovn-ctl: Added new command line argument '--ovsdb-disable-file-column-diff'
    to support ovsdb-server upgrades from version 2.14 and earlier to
    2.15 and later.  See ovsdb(7) for more details.

OVN v20.12.0 - 18 Dec 2020
--------------------------
   - The "datapath" argument to ovn-trace is now optional, since the
     datapath can be inferred from the inport (which is required).
   - The obsolete "redirect-chassis" way to configure gateways has been
     removed.  See ovn-nb(5) for advice on how to update your config if needed.
   - Add IPv4 iPXE support introducing "bootfile_name_alt" option to ovn dhcp
     server.
   - Support other_config:vlan-passthru=true to allow VLAN tagged incoming
     traffic.
   - Propagate currently processed SB_Global.nb_cfg in ovn-controller to the
     local OVS DB integration bridge external_ids:ovn-nb-cfg.
   - Support version pinning between ovn-northd and ovn-controller as an
     option. If the option is enabled and the versions don't match,
     ovn-controller will not process any DB changes.
   - Add "fair" column in Meter table to allow multiple ACL logs to use the
     same Meter while being rate-limited independently.
   - New configuration option for northd 'options:use_logical_dp_groups=true'
     to enable combining of logical flows by logical datapath.  This should
     significantly decrease size of a Southbound DB.  However, in some cases,
     it could have performance penalty for ovn-controller.  Disabled by
     default.

OVN v20.09.0 - 28 Sep 2020
--------------------------
   - Added packet marking support for traffic routed with
     a routing policy.
   - Added DHCPINFORM and DHCPRELEASE support in native
     OVN DHCPv4 responder.
   - Added support for DHCP domain search option (119) in native
     OVN DHCPv4 responder.