@@ -13,6 +13,9 @@ Post-v20.12.0
   - ovn-ctl: Added new command line argument '--ovsdb-disable-file-column-diff'
     to support ovsdb-server upgrades from version 2.14 and earlier to
     2.15 and later.  See ovsdb(7) for more details.
+  - ovn-controller: Add a configuration knob, through OVS external-id
+    "ovn-limit-lflow-cache", to allow enforcing a limit for the size of the
+    logical flow cache.
 
 OVN v20.12.0 - 18 Dec 2020
 --------------------------
